syntax = "proto2";
package boa.types;

import "shared.proto";
import "ast.proto";

option optimize_for = SPEED;

/** A file committed in a Revision */
message ChangedFile {
	/** Describes the kind of the file */
	enum FileKind {
		option allow_alias = true;
		/** The file's type was unknown */
		OTHER = 0;

		/** The file represents a binary file */
		BINARY = 1;

		/** The file represents a text file */
		TEXT = 2;
		/** The file represents an XML file */
		XML = 3;

		/** The file represents a Java source file that had a parse error */
		SOURCE_JAVA_ERROR = 100;
		/** The file represents a Java source file that parsed without error as JLS2 */
		SOURCE_JAVA_JLS2 = 102;
		/** The file represents a Java source file that parsed without error as JLS3 */
		SOURCE_JAVA_JLS3 = 103;
		/** The file represents a Java source file that parsed without error as JLS4 */
		SOURCE_JAVA_JLS4 = 104;
		/** The file represents a Java source file that parsed without error as JLS8 */
		SOURCE_JAVA_JLS8 = 108;
		/** The file represents a Java source file that parsed without error as JLS9 */
		SOURCE_JAVA_JLS9 = 109;
		/** The file represents a Java source file that parsed without error as JLS10 */
		SOURCE_JAVA_JLS10 = 110;
		/** The file represents a Java source file that parsed without error as JLS11 */
		SOURCE_JAVA_JLS11 = 111;
		/** The file represents a Java source file that parsed without error as JLS12 */
		SOURCE_JAVA_JLS12 = 112;
		/** The file represents a Java source file that parsed without error as JLS13 */
		SOURCE_JAVA_JLS13 = 113;
		/** The file represents a Java source file that parsed without error as JLS14 */
		SOURCE_JAVA_JLS14 = 114;
		/** The file represents a Java source file that parsed without error as JLS15 */
		SOURCE_JAVA_JLS15 = 115;
		/** @exclude */
		JAVA_ERROR = 100;
		/** @exclude */
		JLS2 = 102;
		/** @exclude */
		JLS3 = 103;
		/** @exclude */
		JLS4 = 104;
		/** @exclude */
		JLS8 = 108;
		/** @exclude */
		JLS9 = 109;
		/** @exclude */
		JLS10 = 110;
		/** @exclude */
		JLS11 = 111;
		/** @exclude */
		JLS12 = 112;
		/** @exclude */
		JLS13 = 113;
		/** @exclude */
		JLS14 = 114;
		/** @exclude */
		JLS15 = 115;

		/** @exclude TODO */
		SOURCE_CS_ERROR = 200;
		/** @exclude TODO */
		SOURCE_CS_CS1 = 201;
		/** @exclude TODO */
		SOURCE_CS_CS2 = 202;
		/** @exclude TODO */
		SOURCE_CS_CS3 = 203;
		/** @exclude TODO */
		SOURCE_CS_CS4 = 204;
		/** @exclude TODO */
		SOURCE_CS_CS5 = 205;
		/** @exclude */
		CS_ERROR = 200;
		/** @exclude */
		CS1 = 201;
		/** @exclude */
		CS2 = 202;
		/** @exclude */
		CS3 = 203;
		/** @exclude */
		CS4 = 204;
		/** @exclude */
		CS5 = 205;
		
		/** The file represents a JavaScript source file that had a parse error */
		SOURCE_JS_ERROR = 300;
		/** The file represents a JavaScript source file that parsed without error as ES1 */
		SOURCE_JS_ES1 = 301;
		/** The file represents a JavaScript source file that parsed without error as ES2 */
		SOURCE_JS_ES2 = 302;
		/** The file represents a JavaScript source file that parsed without error as ES3 */
		SOURCE_JS_ES3 = 303;
		/** The file represents a JavaScript source file that parsed without error as ES5 */
		SOURCE_JS_ES5 = 304;
		/** The file represents a JavaScript source file that parsed without error as ES6 */
		SOURCE_JS_ES6 = 305;
		/** The file represents a JavaScript source file that parsed without error as ES7 */
		SOURCE_JS_ES7 = 306;
		/** The file represents a JavaScript source file that parsed without error as ES8 */
		SOURCE_JS_ES8 = 307;
		/** @exclude */
		JS_ERROR = 300;
		
		/** The file represents a PHP source file that had a parse error */
		SOURCE_PHP_ERROR = 400;
		/** The file represents a PHP source file that parsed without error as ES1 */
		SOURCE_PHP5 = 401;
		/** The file represents a PHP source file that parsed without error as ES2 */
		SOURCE_PHP5_3 = 402;
		/** The file represents a PHP source file that parsed without error as ES3 */
		SOURCE_PHP5_4 = 403;
		/** The file represents a PHP source file that parsed without error as ES5 */
		SOURCE_PHP5_5 = 404;
		/** The file represents a PHP source file that parsed without error as ES6 */
		SOURCE_PHP5_6 = 405;
		/** The file represents a PHP source file that parsed without error as ES7 */
		SOURCE_PHP7_0 = 406;
		/** The file represents a PHP source file that parsed without error as ES8 */
		SOURCE_PHP7_1 = 407;
		/** @exclude */
		PHP_ERROR = 400;
		
		/** The file represents an HTML source file that had a parse error */
		SOURCE_HTML_ERROR = 500;
		/** The file represents an HTML source file that parsed without error */
		Source_HTML = 501;
		/** @exclude */
		HTML_ERROR = 500;
		
		/** The file represents an XML source file that had a parse error */
		SOURCE_XML_ERROR = 600;
		/** The file represents an HTML source file that parsed without error */
		Source_XML = 601;
		/** @exclude */
		XML_ERROR = 600;
		
		/** The file represents an CSS source file that had a parse error */
		SOURCE_CSS_ERROR = 700;
		/** The file represents an CSS source file that parsed without error */
		Source_CSS = 701;
		/** @exclude */
		CSS_ERROR = 700;
	}
	/** The kind of change for this file */
	required ChangeKind change = 1;
	/** The kind of file */
	required FileKind kind = 2;
	/** The full name and path of the file */
	required string name = 3;
	/** @exclude */
	required uint64 key = 4;
	/** @exclude Indicates if this file has a corresponding parsed AST or not */
	required bool ast = 5;
	/** @exclude */
	optional CommentsRoot comments = 6;
	/** The kinds of changes of this this compared to the corresponding parent commits */
	repeated ChangeKind changes = 7;
	/** The kinds of changes of this this compared to the corresponding parent commits */
	repeated string previous_names = 8;
	/** @exclude The indices of the corresponding parent commits in the list of all commits */
	repeated int32 previous_versions = 9;
	/** @exclude The indices of the previous files in the list of changed files of the corresponding parent commits */
	repeated int32 previous_indices = 10;
}
